<resources>
    <string name="app_name">EducationAR</string>
    <string name="title_home">AR</string>
    <string name="title_administration">Verwaltung</string>
    <string name="title_upload">Hinzufügen</string>
    <string name="title_marker">Generator</string>
    <string name="title_confirmation">Marker speichern</string>

    <string name="menuItem_settings">Settings</string>

    <string name="prefCategory_title_camera">Camera settings</string>
    <string name="pref_title_cameraResolution">Camera resolution</string>
    <string-array name="pref_entries_cameraResolution">
        <item>1920x1080</item>
    </string-array>
    <string-array name="pref_entryValues_cameraResolution">
        <item>1920x1080</item>
    </string-array>
    <string name="pref_defaultValue_cameraResolution">1920x1080</string>

    <string name="pref_title_cameraIndex">Change camera</string>
    <string name="pref_defaultValue_cameraIndex">0</string>

    <string-array name="pref_entries_cameraIndex">
        <item>Rear camera</item>
    </string-array>
    <string-array name="pref_entryValues_cameraIndex">
        <item>0</item>
    </string-array>

    <string name="configText">Einstellungen öffnen</string>
    <string name="insert_id">Marker ID eingeben</string>

</resources>
